--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,28 +3,18 @@
 
 @include foundation-everything();
 
-.launch {
+.launch-page {
+  padding-top: 40px;
+
   h3 {
     color: inherit;
   }
-  .footer-caption {
+  
+  .caption {
     color: $secondary-color;
     font-size: 16px;
   }
-  form {
-    padding: 0 10px;
-  }
-  input {
-    font-size: 21px;
-    box-shadow: none;
-    line-height: 32px;
-    border-color: $light-gray;
-  }
-  input:focus {
-    border-color: $primary-color;
-    outline: none;
-    box-shadow: none;
-  }
+
   .social {
     background: $secondary-color;
     padding: 10px 0;
@@ -35,6 +25,12 @@
       height: 25px;
     }
   }
+
+  .form-signup {
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
+
   .social:hover {
     background: $primary-color;
   }
