--- a/styles/bundle.css
+++ b/styles/bundle.css
@@ -3457,6 +3457,11 @@ table.hover tr:nth-of-type(even):hover {
     border-radius: 6px; }
     .launch-page .social img {
       height: 25px; }
+  .launch-page button {
+    border: 1px solid #32C3A5; }
+  .launch-page button:active {
+    background: #32C3A5;
+    color: white; }
   .launch-page .form-signup {
     margin-top: 10px;
     margin-bottom: 5px; }
