--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,6 +26,14 @@
     }
   }
 
+button {
+  border: 1px solid $primary-color;
+}
+button:active {
+  background: $primary-color;
+  color: white;
+}
+
   .form-signup {
     margin-top: 10px;
     margin-bottom: 5px;
