Fix light green color on button state hover

--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -50,7 +50,7 @@ $secondary-color: #909090;
 $white-opacity: rgba(255,255,255,0.95);
 $transparent-color: rgba(255,255,255,0);
 $medium-green: rgba(35,180,150,0.55); //50 195 150 0.6
-$light-green: scale-color($primary-color, $lightness: 50%);
+$light-green: rgba(50,195,165,0.2);
 $medium-green-solid: rgba(211,237,230,1);
 $deep-green: #8EDECD;
 $light-gray-opacity: rgba(155,155,155, 0.5);
